--- a/result_page/templates/test.html
+++ b/result_page/templates/test.html
@@ -1,20 +1,18 @@
 <!doctype html>
 <title>Mesa i965 CI results</title>
-<h1>Failures for {{ job }}/{{ build_name }}:</h1>
+<h1>Output for {{ job }}/{{ build_name }}/{{ result[0] }}:</h1>
 
 <table style="width:100%">
   <tr>
-    <th>Test Name</th>
     <th>Status</th>
     <th>Filtered Status</th>
     <th>Time</th>
   </tr>
-{% for result in results %}
   <tr>
-    <td><a href="results/{{ result[0] }}">{{ result[1] }}</a></td>
+    <td>{{ result[1] }}</td>
     <td>{{ result[2] }}</td>
     <td>{{ result[3] }}</td>
-    <td>{{ result[4] }}</td>
   </tr>
-{% endfor %}
 </table>
+<br>stdout<br>{{ result[4] }}
+<br>stderr<br>{{ result[5] }}
