sql:incremental improvements

--- a/result_page/templates/builds.html
+++ b/result_page/templates/builds.html
@@ -2,5 +2,5 @@
 <title>Mesa i965 CI results</title>
 <h1>Builds for {{ job }}:</h1>
     {% for build in builds %}
-        <br><a href="{{ build[0] }}/fails">{{ build[1] }} />
+        <br><a href="{{ build[0] }}/fails">{{ build[1] }}</a>
     {% endfor %}
