sql: use pre tag for multiline text

--- a/result_page/templates/test.html
+++ b/result_page/templates/test.html
@@ -14,6 +14,6 @@
     <td>{{ result[4] }}</td>
   </tr>
 </table>
-<br>stdout<br>{{ result[5] }}
-<br>stderr<br>{{ result[6] }}
+<br>stdout<br><pre>{{ result[5] }}</pre>
+<br>stderr<br><pre>{{ result[6] }}</pre>
 <br><a href="../../../test/{{ result[0] }}/history">history</a>
