--- a/result_page/static/main.css
+++ b/result_page/static/main.css
@@ -41,6 +41,18 @@ h1 {
     margin-bottom: 1em;
 }
 
+h2 {
+    clear: right;
+    color: black;
+    text-shadow: 0.05em 0.05em 0.1em #aaaaee;
+    font-family: sans-serif;
+    font-size: 1.4em;
+    font-weight: bold;
+    border-bottom: 1px solid #aaaaee;
+    padding-bottom: 0.1em;
+    margin-bottom: 1em;
+}
+
 table {
     border: 1px solid #8888ff;
     border-collapse: collapse;
