--- a/result_page/static/main.css
+++ b/result_page/static/main.css
@@ -62,6 +62,15 @@ table {
     table-layout: fixed;
 }
 
+table.sideways {
+    border: 1px solid #8888ff;
+    border-collapse: collapse;
+    padding-left: 1.75em;
+    padding-right: 1.75em;
+    table-layout: fixed;
+    min-width: 0;
+}
+
 col {
     border: 1px solid #8888ff;
 }
