--- a/result_page/templates/test.html
+++ b/result_page/templates/test.html
@@ -12,27 +12,37 @@
       <h2>Overview</h2>
       <table class="sideways">
         <tr>
-          <th>Status</th>
+          <th>Hardware</th>
           <td class="{{ result[2] }}">{{ result[2] }}</td>
         </tr>
         <tr>
-          <th>Filtered Status</th>
+        <tr>
+          <th>Architecture</th>
           <td class="{{ result[3] }}">{{ result[3] }}</td>
         </tr>
         <tr>
+        <tr>
+          <th>Status</th>
+          <td class="{{ result[4] }}">{{ result[4] }}</td>
+        </tr>
+        <tr>
+          <th>Filtered Status</th>
+          <td class="{{ result[5] }}">{{ result[5] }}</td>
+        </tr>
+        <tr>
           <th>Time</th>
-          <td>{{ result[4] }}</td>
+          <td>{{ result[6] }}</td>
         </tr>
       </table>
       <p>See also <a href="../../../test/{{ result[0] }}/history">historical results</a> for this test.</p>
     </div>
     <div class="content">
       <h2>stdout</h2>
-      <pre>{{ result[5] }}</pre>
+      <pre>{{ result[7] }}</pre>
     </div>
     <div class="content">
       <h2>stderr</h2>
-      <pre>{{ result[6] }}</pre>
+      <pre>{{ result[8] }}</pre>
     </div>
   </body>
 <html>
