--- a/result_page/templates/history.html
+++ b/result_page/templates/history.html
@@ -17,9 +17,13 @@
           <col/>
           <col/>
           <col/>
+          <col/>
+          <col/>
         </colgroup>
         <tr>
           <th>Build Name</th>
+          <th>Hardware</th>
+          <th>Architecture</th>
           <th>Status</th>
           <th>Filtered Status</th>
           <th>Time</th>
@@ -27,9 +31,11 @@
         {% for result in results %}
         <tr>
           <td><a href="../../builds/{{ result[0] }}/results/{{ result[2] }}">{{ result[1] }}</a></td>
-          <td class="{{ result[3] }}">{{ result[3] }}</td>
-          <td class="{{ result[4] }}">{{ result[4] }}</td>
-          <td>{{ result[5] }}</td>
+          <td>{{ result[3] }}</td>
+          <td>{{ result[4] }}</td>
+          <td class="{{ result[5] }}">{{ result[5] }}</td>
+          <td class="{{ result[6] }}">{{ result[6] }}</td>
+          <td>{{ result[7] }}</td>
         </tr>
         {% endfor %}
       </table>
