sql:  show test by group

--- a/result_page/templates/builds.html
+++ b/result_page/templates/builds.html
@@ -26,7 +26,7 @@
       </tr>
       {% for build in builds %}
         <tr>
-          <td><a href="{{ build[0] }}/fails">{{ build[1] }}</a></td>
+          <td><a href="{{ build[0] }}/group/63a9f0ea7bb98050796b649e85481845">{{ build[1] }}</a></td>
           <td>{{ build[2] }}</td>
           <td>{{ build[3] }}</td>
           <td>{{ build[4] }}</td>
