sql: fix relative path in fail page

--- a/result_page/templates/results.html
+++ b/result_page/templates/results.html
@@ -42,7 +42,7 @@
       </tr>
       {% for fail in fails %}
       <tr>
-        <td><a href="results/{{ fail[0] }}">{{ fail[1] }}</a></td>
+        <td><a href="../results/{{ fail[0] }}">{{ fail[1] }}</a></td>
         <td>{{ fail[2] }}</td>
         <td>{{ fail[3] }}</td>
         <td class="{{ fail[4] }}">{{ fail[4] }}</td>
