--- a/result_page/templates/results.html
+++ b/result_page/templates/results.html
@@ -9,20 +9,78 @@
   </head>
   <body>
     <title>Mesa i965 CI results</title>
-    <h1>Failures for {{ job }}/{{ build_name }}:</h1>
-    {% for subgroup in subgroups %}
-    <div class="content">
-      <a href="{{ subgroup[1] }}">{{ subgroup[0] }}</a>
-    </div>
-    {% endfor %}
-    
-    {% for test_result in test_results %}
-    <div class="content">
-      Test output: <a href="../results/{{ test_result[0] }}">{{ test_result[1] }}</a>
-    </div>
-    {% endfor %}
+    <h1>Results for {{ job }}/{{ build_name }}/{{ group_name }}:</h1>
 
+    {% if subgroups %}
     <div class="content">
+      <h2>Subgroups</h2>
+      <table style="width:100%">
+        <colgroup>
+          <col/>
+          <col/>
+          <col/>
+          <col/>
+        </colgroup>
+        <tr>
+          <th>Group Name</th>
+          <th>Pass Count</th>
+          <th>Filtered Pass Count</th>
+          <th>Fail Count</th>
+        </tr>
+        {% for subgroup in subgroups %}
+        <tr>
+          <td><a href="{{ subgroup["subgroup_id"] }}">{{ subgroup["subgroup_name"] }}</a></td>
+          <td>{{ subgroup["pass_count"] }}</td>
+          {% if subgroup["skip_count"] %}
+          <td class "skip">{{ subgroup["skip_count"] }}</td>
+          {% else %}
+          <td>{{ subgroup["skip_count"] }}</td>
+          {% endif %}
+          {% if subgroup["fail_count"] %}
+          <td class="fail">{{ subgroup["fail_count"] }}</td>
+          {% else %}
+          <td>{{ subgroup["fail_count"] }}</td>
+          {% endif %}
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
+    {% endif %}
+
+    {% if test_results %}
+    <div class="content">
+      <h2>tests</h2>
+      <table style="width:100%">
+        <colgroup>
+          <col/>
+          <col/>
+          <col/>
+          <col/>
+          <col/>
+        </colgroup>
+        <tr>
+          <th>Test</th>
+          <th>Hardware</th>
+          <th>Architecture</th>
+          <th>Status</th>
+          <th>Filtered Status</th>
+        </tr>
+        {% for test_result in test_results %}
+        <tr>
+          <td><a href="../results/{{ test_result["result_id"] }}">{{ test_result["test_name"] }}</a></td>
+          <td>{{ test_result["hardware"] }}</td>
+          <td>{{ test_result["arch"] }}</td>
+          <td class="{{ test_result["status"] }}">{{ test_result["status"] }}</td>
+          <td class="{{ test_result["filtered_status"] }}">{{ test_result["filtered_status"] }}</td>
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
+    {% endif %}
+
+    {% if fails %}
+    <div class="content">
+      <h2>failures</h2>
       <table style="width:100%">
         <colgroup>
           <col/>
@@ -32,25 +90,27 @@
           <col/>
           <col/>
         </colgroup>
-      <tr>
-        <th>Test Name</th>
-        <th>Hardware</th>
-        <th>Architecture</th>
-        <th>Status</th>
-        <th>Filtered Status</th>
-        <th>Time</th>
-      </tr>
-      {% for fail in fails %}
-      <tr>
-        <td><a href="../results/{{ fail[0] }}">{{ fail[1] }}</a></td>
-        <td>{{ fail[2] }}</td>
-        <td>{{ fail[3] }}</td>
-        <td class="{{ fail[4] }}">{{ fail[4] }}</td>
-        <td class="{{ fail[5] }}">{{ fail[5] }}</td>
-        <td>{{ fail[6] }}</td>
-      </tr>
-      {% endfor %}
-    </table>
+        <tr>
+          <th>Test Name</th>
+          <th>Hardware</th>
+          <th>Architecture</th>
+          <th>Status</th>
+          <th>Filtered Status</th>
+          <th>Time</th>
+        </tr>
+        {% for fail in fails %}
+        <tr>
+          <td><a href="../results/{{ fail[0] }}">{{ fail[1] }}</a></td>
+          <td>{{ fail[2] }}</td>
+          <td>{{ fail[3] }}</td>
+          <td class="{{ fail[4] }}">{{ fail[4] }}</td>
+          <td class="{{ fail[5] }}">{{ fail[5] }}</td>
+          <td>{{ fail[6] }}</td>
+        </tr>
+        {% endfor %}
+      </table>
     </div>
+    {% endif %}
+
   </body>
 </html>
