sql: fix skip coloring

--- a/result_page/templates/results.html
+++ b/result_page/templates/results.html
@@ -32,7 +32,7 @@
           <td><a href="{{ subgroup["subgroup_id"] }}">{{ subgroup["subgroup_name"] }}</a></td>
           <td>{{ subgroup["pass_count"] }}</td>
           {% if subgroup["skip_count"] %}
-          <td class "skip">{{ subgroup["skip_count"] }}</td>
+          <td class="skip">{{ subgroup["skip_count"] }}</td>
           {% else %}
           <td>{{ subgroup["skip_count"] }}</td>
           {% endif %}
