sql: use a base layout to reduce redundant html

--- a/result_page/templates/builds.html
+++ b/result_page/templates/builds.html
@@ -1,23 +1,17 @@
-<html xmlns="http://www.w3.org/TR/xhtml1/strict">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+{% extends 'base.html' %}
 
-    <title>Mesa i965 CI results</title>
-    <link rel="stylesheet" href="/static/main.css"/>
-    <link rel="stylesheet" href="/static/solarized-dark.css"/>
-  </head>
-  <body>
-<title>Mesa i965 CI results</title>
-<h1>Builds for {{ job }}:</h1>
-    <div class="content">
-      <table style="width:100%">
-        <colgroup>
-          <col/>
-          <col/>
-          <col/>
-          <col/>
-        </colgroup>
+{% block body %}
+<body>
+  <title>Mesa i965 CI results</title>
+  <h1>Builds for {{ job }}:</h1>
+  <div class="content">
+    <table style="width:100%">
+      <colgroup>
+        <col/>
+        <col/>
+        <col/>
+        <col/>
+      </colgroup>
       <tr>
         <th>Build Name</th>
         <th>Pass Count</th>
@@ -25,23 +19,22 @@
         <th>Fail Count</th>
       </tr>
       {% for build in builds %}
-        <tr>
-          <td><a href="{{ build["build_id"] }}/group/63a9f0ea7bb98050796b649e85481845">{{ build["build_name"] }}</a></td>
-          <td>{{ build["pass_count"] }}</td>
-          {% if build["filtered_pass_count"] %}
-          <td class="skip">{{ build["filtered_pass_count"] }}</td>
-          {% else %}
-          <td>{{ build["filtered_pass_count"] }}</td>
-          {% endif %}
-          {% if build["fail_count"] %}
-          <td class="fail">{{ build["fail_count"] }}</td>
-          {% else %}
-          <td>{{ build["fail_count"] }}</td>
-          {% endif %}
-        </tr>
-        {% endfor %}
-      </table>
-    </div>
-  </body>
-</html>
-
+      <tr>
+        <td><a href="{{ build["build_id"] }}/group/63a9f0ea7bb98050796b649e85481845">{{ build["build_name"] }}</a></td>
+        <td>{{ build["pass_count"] }}</td>
+        {% if build["filtered_pass_count"] %}
+        <td class="skip">{{ build["filtered_pass_count"] }}</td>
+        {% else %}
+        <td>{{ build["filtered_pass_count"] }}</td>
+        {% endif %}
+        {% if build["fail_count"] %}
+        <td class="fail">{{ build["fail_count"] }}</td>
+        {% else %}
+        <td>{{ build["fail_count"] }}</td>
+        {% endif %}
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+</body>
+{% endblock %}
