--- a/result_page/templates/history.html
+++ b/result_page/templates/history.html
@@ -1,45 +1,38 @@
-<html xmlns="http://www.w3.org/TR/xhtml1/strict">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+{% extends 'base.html' %}
 
-    <title>Mesa i965 CI results</title>
-    <link rel="stylesheet" href="/static/main.css"/>
-    <link rel="stylesheet" href="/static/solarized-dark.css"/>
-  </head>
-  <body>
-    <h1>history for {{ job }}/{{ test_name }}:</h1>
-    <div class="content">
+{% block body %}
+<body>
+  <h1>history for {{ job }}/{{ test_name }}:</h1>
+  <div class="content">
 
-      <table style="width:100%">
-        <colgroup>
-          <col/>
-          <col/>
-          <col/>
-          <col/>
-          <col/>
-          <col/>
-        </colgroup>
-        <tr>
-          <th>Build Name</th>
-          <th>Hardware</th>
-          <th>Architecture</th>
-          <th>Status</th>
-          <th>Filtered Status</th>
-          <th>Time</th>
-        </tr>
-        {% for result in results %}
-        <tr>
-          <td><a href="../../builds/{{ result["build_id"] }}/results/{{ result["result_id"] }}">{{ result["build_name"] }}</a></td>
-          <td>{{ result["hardware"] }}</td>
-          <td>{{ result["arch"] }}</td>
-          <td class="{{ result["status"] }}">{{ result["status"] }}</td>
-          <td class="{{ result["filtered_status"] }}">{{ result["filtered_status"] }}</td>
-          <td>{{ result["time"] }}</td>
-        </tr>
-        {% endfor %}
-      </table>
-    </div>
-  </body>
-</html>
-
+    <table style="width:100%">
+      <colgroup>
+        <col/>
+        <col/>
+        <col/>
+        <col/>
+        <col/>
+        <col/>
+      </colgroup>
+      <tr>
+        <th>Build Name</th>
+        <th>Hardware</th>
+        <th>Architecture</th>
+        <th>Status</th>
+        <th>Filtered Status</th>
+        <th>Time</th>
+      </tr>
+      {% for result in results %}
+      <tr>
+        <td><a href="../../builds/{{ result["build_id"] }}/results/{{ result["result_id"] }}">{{ result["build_name"] }}</a></td>
+        <td>{{ result["hardware"] }}</td>
+        <td>{{ result["arch"] }}</td>
+        <td class="{{ result["status"] }}">{{ result["status"] }}</td>
+        <td class="{{ result["filtered_status"] }}">{{ result["filtered_status"] }}</td>
+        <td>{{ result["time"] }}</td>
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+</body>
+{% endblock %}
