--- a/result_page/templates/test.html
+++ b/result_page/templates/test.html
@@ -1,49 +1,44 @@
-<html xmlns="http://www.w3.org/TR/xhtml1/strict">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Mesa i965 CI results</title>
-    <link rel="stylesheet" href="/static/main.css"/>
-    <link rel="stylesheet" href="/static/solarized-dark.css"/>
-  </head>
-  <body>
-    <h1>Output for {{ job }}/{{ build_name }}/{{ result["test_name"] }}:</h1>
-    <div class="content">
-      <h2>Overview</h2>
-      <table class="sideways">
-        <tr>
-          <th>Hardware</th>
-          <td>{{ result["hardware"] }}</td>
-        </tr>
-        <tr>
-        <tr>
-          <th>Architecture</th>
-          <td>{{ result["arch"] }}</td>
-        </tr>
-        <tr>
-        <tr>
-          <th>Status</th>
-          <td class="{{ result["status"] }}">{{ result["status"] }}</td>
-        </tr>
-        <tr>
-          <th>Filtered Status</th>
-          <td class="{{ result["filtered_status"] }}">{{ result["filtered_status"] }}</td>
-        </tr>
-        <tr>
-          <th>Time</th>
-          <td>{{ result["time"] }}</td>
-        </tr>
-      </table>
-      <p>See also <a href="../../../test/{{ result["test_id"] }}/history">historical results</a> for this test.</p>
-    </div>
-    <div class="content">
-      <h2>stdout</h2>
-      <pre>{{ result["stdout"] }}</pre>
-    </div>
-    <div class="content">
-      <h2>stderr</h2>
-      <pre>{{ result["stderr"] }}</pre>
-    </div>
-  </body>
-<html>
+{% extends 'base.html' %}
+
+{% block body %}
+<body>
+  <h1>Output for {{ job }}/{{ build_name }}/{{ result["test_name"] }}:</h1>
+  <div class="content">
+    <h2>Overview</h2>
+    <table class="sideways">
+      <tr>
+        <th>Hardware</th>
+        <td>{{ result["hardware"] }}</td>
+      </tr>
+      <tr>
+      <tr>
+        <th>Architecture</th>
+        <td>{{ result["arch"] }}</td>
+      </tr>
+      <tr>
+      <tr>
+        <th>Status</th>
+        <td class="{{ result["status"] }}">{{ result["status"] }}</td>
+      </tr>
+      <tr>
+        <th>Filtered Status</th>
+        <td class="{{ result["filtered_status"] }}">{{ result["filtered_status"] }}</td>
+      </tr>
+      <tr>
+        <th>Time</th>
+        <td>{{ result["time"] }}</td>
+      </tr>
+    </table>
+    <p>See also <a href="../../../test/{{ result["test_id"] }}/history">historical results</a> for this test.</p>
+  </div>
+  <div class="content">
+    <h2>stdout</h2>
+    <pre>{{ result["stdout"] }}</pre>
+  </div>
+  <div class="content">
+    <h2>stderr</h2>
+    <pre>{{ result["stderr"] }}</pre>
+  </div>
+</body>
+{% endblock %}
 
