--- a/result_page/templates/base.html
+++ b/result_page/templates/base.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/static/main.css"/>
     <link rel="stylesheet" href="/static/solarized-dark.css"/>
   </head>
-  {% block body %}{% endblock %}
+  <body>
+    {% block body %}{% endblock %}
+  </body>
 </html>
 
